adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,6 +12,7 @@
   <h1>Olá, Mundo!</h1>
   <hr>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam earum molestiae, ex ullam eligendi quod facere corporis ab quis atque fugit cupiditate nam, dignissimos amet omnis minus, voluptas praesentium cumque.</p>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In nulla veniam corrupti ab ea suscipit perspiciatis quam tenetur? Veniam, quis a! Ab similique illo provident voluptate ullam quod voluptatum amet.</p>
 </body>
 
 </html>
